# neuroformats-rs

./: .gitignore  .travis.yml  CHANGES  Cargo.toml  README.md  README_DEV.md
.github/workflows/: tests.yml
benches/: benchmark.rs
examples/brain_atlas/: Cargo.toml
examples/brain_atlas/src/: main.rs
examples/brain_bevy/: Cargo.toml
examples/brain_bevy/src/: main.rs
examples/brain_export/: Cargo.toml
examples/brain_export/src/: main.rs
examples/brain_morph/: Cargo.toml
examples/brain_morph/src/: main.rs
examples/brain_readme/: Cargo.toml
examples/brain_readme/src/: main.rs
examples/brain_rpt/: Cargo.toml  main.rs  run
examples/brain_rpt/src/: main.rs
resources/subjects_dir/subject1/surf/: lh.sulc  rh.sulc  rh.thickness
src/: error.rs  fs_annot.rs  fs_curv.rs  fs_label.rs  fs_mgh.rs  fs_surface.rs  lib.rs  traits.rs  util.rs
tests/: test_fs_curv.rs
