[package]
name = "neuroformats"
version = "0.2.0"
authors = ["Tim Schäfer <ts+code@rcmd.org>"]
edition = "2018"
repository = "https://github.com/dfsp-spirit/neuroformats-rs"
homepage = "https://github.com/dfsp-spirit/neuroformats-rs"
keywords = ["neuroimaging", "brain", "MRI", "fileformats", "neuroscience"]
categories = ["filesystem", "science", "parser-implementations"]
description = "Handling of structural neuroimaging file formats. The focus is on surface-based brain morphometry data and FreeSurfer file formats."
license = "MIT OR Apache-2.0"
exclude = ["/examples", "/resources", ".gitignore"]


[dependencies]
byteordered = "0.5"
flate2 = "1.0"
quick-error = "2.0"
approx = "0.4"
#ndarray = "0.14"
ndarray-stats = "0.4.0"

[dependencies.ndarray]
version = "0.14"
default-features = true
features = ["approx"]


[profile.dev]
opt-level = 3




