[package]
name = "neuroformats"
version = "0.2.5"
authors = ["Tim Schäfer <ts+code@rcmd.org>"]
edition = "2018"
repository = "https://github.com/dfsp-spirit/neuroformats-rs"
homepage = "https://github.com/dfsp-spirit/neuroformats-rs"
keywords = ["neuroimaging", "brain", "MRI", "fileformats", "neuroscience"]
categories = ["filesystem", "science", "parser-implementations"]
description = "Handling of structural neuroimaging file formats. The focus is on surface-based brain morphometry data and FreeSurfer file formats."
license = "MIT OR Apache-2.0"
exclude = ["/examples", "/resources", ".gitignore"]


[dependencies]
byteordered = "0.6.0"
flate2 = "1.0"
quick-error = "2.0"
approx = "0.5.1"
ndarray-stats = "0.6.0"
colorgrad = "0.7.1"

[dependencies.ndarray]
version = "0.16.1"
default-features = true
features = ["approx"]

[dev-dependencies]
tempfile = "3.2.0"

[profile.dev]
opt-level = 3
